--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			font-family: 'Salsa';
 		}
 		body{
-			background: darklategrey;
+			background: darkslategrey;
 		}
 		form{
 			width: 240px;
